# rufm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
migrations/2021-07-28-191440_init/: up.sql
rufm-cli/: Cargo.toml
rufm-cli/src/: main.rs
rufm-cli/src/handlers/: mod.rs
rufm-cli/src/handlers/accounts/: create.rs  list.rs  mod.rs  show.rs
rufm-cli/src/handlers/import/: mod.rs
rufm-cli/src/handlers/transactions/: create.rs  list.rs  mod.rs
rufm-core/: Cargo.toml
rufm-core/migrations/2021-07-29-135446_transactions_date/: down.sql  up.sql
rufm-core/migrations/2021-08-04-103422_init/: up.sql
rufm-core/src/: lib.rs  schema.rs
rufm-core/src/models/: accounts.rs  transactions.rs
rufm-core/src/models/accounts/: account.rs  account_id.rs  account_type.rs  mod.rs  new_account.rs
rufm-core/tests/: accounts.rs  database.rs  lib.rs  transactions.rs
rufm-import-firefly-iii/: Cargo.toml
rufm-import-firefly-iii/src/: lib.rs
src/: schema.rs
tests/: accounts.rs  lib.rs  transactions.rs
