[package]
name = "rufm-cli"
version = "0.1.0"
edition = "2018"
authors = ["Thomas Plaçais <thomas.placais@protonmail.com>"]
repository = "https://github.com/BlueGone/rufm"
license = "MIT"

[dependencies]
structopt = "0.3.22"
shellexpand = "2.1.0"
chrono = "0.4.19"
rufm-core = { path = "../rufm-core" }
rufm-import-firefly-iii = { path = "../rufm-import-firefly-iii", optional = true }
colored = "2.0.0"

[features]
import-firefly-iii = [ "rufm-import-firefly-iii" ]
