[package]
name = "rufm-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["sqlite", "chrono"] }
diesel-derive-newtype = "0.1.2"
diesel_migrations = "1.4.0"
