[package]
name = "rufm-import-firefly-iii"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.127", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.26"

[dependencies.rufm-core]
path = "../rufm-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
