[package]
name = "rufm-import-firefly-iii"
version = "0.1.0"
edition = "2018"
authors = ["Thomas Plaçais <thomas.placais@protonmail.com>"]
repository = "https://github.com/BlueGone/rufm"
license = "MIT"

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.127", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.26"
rufm-core = { path = "../rufm-core" }
